# CausalCast-AI

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  agents.md  docker-compose.yml  phase3c_part1_prompt.txt  phase3c_part2_prompt.txt  phase4_prompt.txt  phase5c_rag_prompt.txt
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-deep.txt  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260715_0001_metadata.py  20260715_0002_datasets.py  20260715_0003_schema_mapping.py  20260716_0004_data_quality.py  20260716_0005_preparations.py  20260716_0006_forecasting.py  20260716_0007_gradient_boosting.py  20260717_0008_deep_forecasting_foundation.py  6d7c08a17fb4_explainability_foundation.py  c97fbf5e17e3_business_intelligence_foundation.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/core/: audit.py  authz.py  config.py  cost.py  database.py  encryption.py  exceptions.py  governance.py  logging.py  middleware.py  observability.py  security.py  security_middleware.py
backend/app/deep_learning/: __init__.py
backend/app/models/: __init__.py  business_intelligence.py  dataset.py  explainability.py  forecasting.py  metadata.py  preparation.py  quality.py  schema_profile.py
backend/app/rag/: chunker.py  dependencies.py  document_registry.py  embeddings.py  loader.py  metadata.py  rag_service.py  retriever.py  vector_store.py
backend/app/schemas/: __init__.py  business_intelligence.py  common.py  dataset.py  deep_forecasting.py  explainability.py  forecasting.py  health.py  preparation.py  production_forecast.py  quality.py  rag.py  schema_mapping.py  system.py
backend/app/services/: column_profiler.py  data_quality_service.py  dataset_parser_service.py  dataset_service.py  dataset_storage_service.py  forecast_metrics.py  forecast_model_registry.py  forecast_storage_service.py  forecasting_service.py  (+11 more)
backend/scripts/: index_rag.py
backend/tests/: conftest.py  test_cors.py  test_datasets.py  test_deep_forecasting.py  test_forecasting.py  test_health.py  test_nhits_training.py  test_preparations.py  test_production_forecast.py  test_quality.py  test_rag.py  test_schema_mapping.py  test_system.py
(+316 files in other folders)
