[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "causalcast-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1",
  "pydantic-settings>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.35,<1",
  "joblib>=1.4,<2",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "scikit-learn>=1.5,<2",
  "statsmodels>=0.14,<1",
  "catboost>=1.2.8,<2",
  "lightgbm>=4.6,<5",
  "optuna>=4.5,<5",
  "shap>=0.48,<1",
  "xgboost>=3.0,<4",
]

[project.optional-dependencies]
deep = [
  "torch>=2.2,<2.9",
  "neuralforecast>=2.0,<3.2",
  "PyYAML>=6.0,<7",
  "matplotlib>=3.9,<4",
]
dev = ["alembic>=1.16,<2", "httpx>=0.28,<1", "mypy>=1.17,<2", "pytest>=8.4,<9", "ruff>=0.12,<1"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic"]

[[tool.mypy.overrides]]
module = ["catboost", "joblib", "lightgbm", "neuralforecast", "neuralforecast.*", "optuna", "pandas", "shap", "sklearn", "sklearn.*", "statsmodels", "statsmodels.*", "xgboost", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
